changed guess key to enter

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <link href=css/guess.css rel=stylesheet>
 
 <input id=guess_input>
-<input id=guess_button onclick=guess() type=button value="Guess (G)">
+<input id=guess_button onclick=guess() type=button value="Guess (ENTER)">
 <input onclick=new_game() type=button value="New Game (N)">
 <hr>
 <div id=info></div>
