simplified hotkey display

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 
 <input id=guess-input>
 <input id=guess-button onclick=guess() type=button value="Guess (ENTER)">
-<input onclick=new_game() type=button value="New Game (N)">
+<input onclick=new_game() type=button value="(N)ew Game">
 <hr>
 <div id=info></div>
 I am thinking of a number between 1 and <input id=guess-max onclick=set_max() type=button value=1000000>, inclusive. Guess!<br>
