project rename, removed .gitignore

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Guess</title>
+<title>Guess.htm</title>
 <link href=css/guess.css rel=stylesheet>
 
 <input id=guess-input>
