--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Guess.htm</title>
+<link href=css/guess.css rel=stylesheet>
 
 <input id=guess-input>
 <input id=guess-button onclick=guess() type=button value="Guess [ENTER]">
