replaced css with common dom.css

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <title>Guess.htm</title>
-<link href=css/guess.css rel=stylesheet>
+<link href=../common/css/dom.css rel=stylesheet>
 
 <input id=guess-input>
 <input id=guess-button onclick=guess() type=button value="Guess [ENTER]">
