added common input.js usage, improved formatting

--- a/index.htm
+++ b/index.htm
@@ -15,5 +15,6 @@ and
 <input id=guess-max onclick=set_value('max') type=button value=1000000>, inclusive. Guess!<br>
 Guesses: <span id=guesses>0</span>
 
+<script src=../common/js/input.js></script>
 <script src=../common/js/random.js></script>
 <script src=js/guess.js></script>
