--- a/index.htm
+++ b/index.htm
@@ -5,14 +5,14 @@
 <link href=../common/css/dom.css rel=stylesheet>
 
 <input id=guess-input>
-<input id=guess-button onclick=guess() type=button value="Guess [ENTER]">
-<input onclick=new_game(false) type=button value="New Game [N]">
+<input id=guess-button type=button value="Guess [ENTER]">
+<input id=new-game type=button value="New Game [N]">
 <hr>
 <div id=info></div>
 <hr>
-I am thinking of an integer between <input id=guess-min onclick=set_value('min') type=button value=1>
+I am thinking of an integer between <input id=guess-min type=button value=1>
 and
-<input id=guess-max onclick=set_value('max') type=button value=1000000>, inclusive. Guess!<br>
+<input id=guess-max type=button value=1000000>, inclusive. Guess!<br>
 Guesses: <span id=guesses>0</span>
 
 <script src=../common/js/input.js></script>
