added common core.js usage

--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,7 @@ and
 <input id=guess-max type=button value=1000000>, inclusive. Guess!<br>
 Guesses: <span id=guesses>0</span>
 
+<script src=../common/js/core.js></script>
 <script src=../common/js/input.js></script>
 <script src=../common/js/random.js></script>
 <script src=js/guess.js></script>
