switched from buttons/alerts to text inputs

--- a/index.htm
+++ b/index.htm
@@ -4,16 +4,16 @@
 <title>Guess.htm</title>
 <link href=../common/css/dom.css rel=stylesheet>
 
+<span id=guesses>0</span>
 <input id=guess-input>
 <input id=guess-button type=button value="Guess [ENTER]">
 <input id=new-game type=button value="New Game [N]">
 <hr>
 <div id=info></div>
 <hr>
-I am thinking of an integer between <input id=guess-min type=button value=1>
-and
-<input id=guess-max type=button value=1000000>, inclusive. Guess!<br>
-Guesses: <span id=guesses>0</span>
+I am thinking of an integer between<br>
+<input id=guess-min> and <input id=guess-max>,<br>
+inclusive. Guess!
 
 <script src=../common/js/core.js></script>
 <script src=../common/js/input.js></script>
