--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <meta charset=utf-8>
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <title>Guess.htm</title>
+<link href=../common/css/core.css rel=stylesheet>
 <link href=../common/css/dom.css rel=stylesheet>
 
 <span id=guesses>0</span>
