made max and min settings

--- a/index.htm
+++ b/index.htm
@@ -5,16 +5,12 @@
 <link href=../common/css/core.css rel=stylesheet>
 <link href=../common/css/dom.css rel=stylesheet>
 
-<span id=guesses>0</span>
+<span id=guesses></span>
 <input id=guess-input>
 <input id=guess-button type=button value="Guess [ENTER]">
 <input id=new-game type=button value="New Game [N]">
 <hr>
 <div id=info></div>
-<hr>
-I am thinking of an integer between<br>
-<input id=guess-min> and <input id=guess-max>,<br>
-inclusive. Guess!
 
 <script src=../common/js/core.js></script>
 <script src=js/guess.js></script>
