renamed JS file to main.js

--- a/index.htm
+++ b/index.htm
@@ -13,4 +13,4 @@
 <div id=info></div>
 
 <script src=../common/js/core.js></script>
-<script src=js/guess.js></script>
+<script src=js/main.js></script>
