--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,7 @@
 <link href=../common/css/dom.css rel=stylesheet>
 
 <span id=guesses></span>
-<input id=guess-input>
-<input id=guess-button type=button value="Guess [ENTER]">
-<input id=new-game type=button value="New Game [N]">
+<input id=guess-input><input id=guess-button type=button value="Guess [ENTER]"><input id=new-game type=button value="New Game [N]">
 <hr>
 <div id=info></div>
 
