--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <link href=../common/css/core.css rel=stylesheet>
 
 <span id=guesses></span>
-<input id=guess-input><input id=guess-button type=button value="Guess [ENTER]"><input id=new-game type=button value="New Game [N]">
+<input id=guess-input type=number><input id=guess-button type=button value="Guess [ENTER]"><input id=new-game type=button value="New Game [N]">
 <div id=info></div>
 
 <script src=../common/js/core.js></script>
