--- a/index.htm
+++ b/index.htm
@@ -9,5 +9,4 @@
 <div id=info></div>
 
 <script src=../common/js/core.js></script>
-<script src=js/main.js></script>
-<script src=js/data.js></script>
+<script src=repo.js></script>
